--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "food-delivery-app",
   "version": "0.1.0",
-  "proxy": "https://food-delivery-99a8.onrender.com",
+  "proxy": "http://localhost:3500",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -13,7 +13,6 @@
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
